@@ -25,7 +25,7 @@ public class OrderService {
     private final ProductClient productClient;
 
     @Transactional
-    public OrderResponse createOrder(OrderAddRequest request) {
+    public OrderResponse createOrder(OrderAddRequest request, String userId) {
         // 1. 상품 서비스에서 상품 목록 조회
         List<ProductGetResponse> products = productClient.getProducts();
 
@@ -36,7 +36,7 @@ public class OrderService {
 
         List<Long> validOrderItemIds = request.getOrderItemIds().stream()
                 .filter(validProductIds::contains) // 유효한 상품만 필터링
-                .collect(Collectors.toList());
+                .toList();
 
         // 3. 유효한 상품 ID가 없으면 예외 처리 또는 빈 주문 생성
         if (validOrderItemIds.isEmpty()) {
@@ -44,17 +44,22 @@ public class OrderService {
         }
 
         // 4. 주문 생성 및 저장
-        Order order = orderRepository.save(request.toOrder(UUID.randomUUID()));
+        Order order = orderRepository.save(request.toOrder(UUID.fromString(userId)));
 
         // 5. 응답 반환
         return new OrderResponse(order.getId());
     }
 
     @Transactional
-    public OrderResponse updateOrder(OrderUpdateRequest request, Long orderId) {
+    public OrderResponse updateOrder(OrderUpdateRequest request, Long orderId, String userId) {
         // 1. 주문 유효성
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new IllegalArgumentException("No valid order"));
+
+        if(!order.getUserId().equals(UUID.fromString(userId))){
+            throw new IllegalArgumentException("No valid products in the order");
+        }
+
         // 2. 상품 서비스 상품 목록 조회
         List<ProductGetResponse> products = productClient.getProducts();
 
@@ -75,9 +80,13 @@ public class OrderService {
         return new OrderResponse(updateOrder.getId());
     }
 
-    public OrderGetResponse getOrder(Long orderId) {
+    public OrderGetResponse getOrder(Long orderId, String userId) {
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new IllegalArgumentException("No valid order"));
+
+        if(!order.getUserId().equals(UUID.fromString(userId))){
+            throw new IllegalArgumentException("No valid products in the order");
+        }
 
         return new OrderGetResponse(order.getId(), order.getOrderItemIds());
     }
